--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -68,13 +68,14 @@
                     android:layout_height="wrap_content" />
 
                     <RelativeLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="100dp"
                         android:layout_alignParentRight="true"
                         android:layout_height="match_parent" >
                         <TextView
                             android:id="@+id/jxz_yue"
                             android:layout_width="wrap_content"
                             android:text="聚钱庄余额"
+                            android:singleLine="true"
                             android:layout_marginRight="15dp"
                             android:textColor="@color/black"
                             android:layout_centerVertical="true"
@@ -93,12 +94,10 @@
                         android:layout_marginLeft="30dp"
                         android:layout_alignParentLeft="true"
                         android:layout_centerVertical="true"
-                        android:text="90.00元"
                         android:layout_height="wrap_content" />
                     <TextView
                         android:id="@+id/tv_jqzyue"
                         android:layout_width="wrap_content"
-                        android:text="90.00元"
                         android:textColor="@color/red"
                         android:layout_centerVertical="true"
                         android:textSize="16sp"
@@ -119,13 +118,14 @@
                     android:layout_height="wrap_content" />
 
                     <RelativeLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="100dp"
                         android:layout_alignParentRight="true"
                         android:layout_height="match_parent" >
                         <TextView
                             android:layout_width="wrap_content"
                             android:text="聚钱庄收益"
                             android:layout_marginRight="16dp"
+                            android:singleLine="true"
                             android:layout_centerVertical="true"
                             android:textColor="@color/black"
                             android:textSize="15sp"
@@ -143,12 +143,10 @@
                         android:layout_marginLeft="30dp"
                         android:layout_alignParentLeft="true"
                         android:layout_centerVertical="true"
-                        android:text="90.00元"
                         android:layout_height="wrap_content" />
                     <TextView
                         android:id="@+id/tv_jxz_accrual"
                         android:layout_width="wrap_content"
-                        android:text="90.00元"
                         android:textColor="@color/red"
                         android:layout_centerVertical="true"
                         android:textSize="16sp"
@@ -475,6 +473,9 @@
                     </LinearLayout>
 
             </LinearLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"></View>
             </LinearLayout>
         </LinearLayout>
         </ScrollView>
