--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -410,7 +410,7 @@
                                   android:layout_height="wrap_content"
                                   android:gravity="left|center"
                                   android:layout_weight="1"
-                                  android:textColor="@color/blue_light"
+                                  android:textColor="@color/red"
                                   vswitch:idleDuaration="2000"
                                   vswitch:switchDuaration="500"
                                   vswitch:switchOrientation="up" />
@@ -461,7 +461,7 @@
                                     android:layout_height="wrap_content"
                                     android:gravity="left|center"
                                     android:layout_weight="1"
-                                    android:textColor="@color/blue_light"
+                                    android:textColor="@color/red"
                                     vswitch:idleDuaration="2000"
                                     vswitch:switchDuaration="500"
                                     vswitch:switchOrientation="up" />
