抢红包判断，bug处理

--- a/app/src/main/res/layout/activity_send_red.xml
+++ b/app/src/main/res/layout/activity_send_red.xml
@@ -201,6 +201,7 @@
         android:background="@color/gray"
         android:layout_height="0.2dp"></View>
     <RelativeLayout
+        android:id="@+id/rtl_wxpay"
         android:layout_width="match_parent"
         android:layout_height="45dp">
         <RadioButton
@@ -226,6 +227,7 @@
         android:background="@color/gray"
         android:layout_height="0.2dp"></View>
     <RelativeLayout
+        android:id="@+id/rtl_alipay"
         android:layout_width="match_parent"
         android:layout_height="45dp">
         <RadioButton
