--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -31,8 +31,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             layout="@layout/no_date_view" />
-        <ScrollView
-            android:layout_width="wrap_content"
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipeRefreshLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ScrollView
+            android:layout_width="match_parent"
             android:visibility="visible"
             android:background="@color/white"
             android:layout_height="wrap_content"
@@ -486,7 +490,7 @@
                 </LinearLayout>
             </LinearLayout>
             </ScrollView>
-
+        </android.support.v4.widget.SwipeRefreshLayout>
     </FrameLayout>
 
 </LinearLayout>
