--- a/app/src/main/res/layout/view_lanner_item.xml
+++ b/app/src/main/res/layout/view_lanner_item.xml
@@ -7,6 +7,7 @@
         android:id="@+id/titleImageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@mipmap/banner_red"
         android:scaleType="centerCrop" />
 
     <TextView
