分享，广播，细节处理

--- a/app/src/main/res/layout/activity_shoutu_detail.xml
+++ b/app/src/main/res/layout/activity_shoutu_detail.xml
@@ -28,6 +28,7 @@
       <TextView
           android:id="@+id/tv_receive"
           android:layout_width="wrap_content"
+          android:visibility="gone"
           android:text="收徒"
           android:textSize="17sp"
           android:textColor="@color/white"
