--- a/app/src/main/res/layout/activity_newer_task.xml
+++ b/app/src/main/res/layout/activity_newer_task.xml
@@ -34,7 +34,7 @@
             android:orientation="vertical"
             android:layout_height="wrap_content">
             <RelativeLayout
-                android:id="@+id/rtl_youmi"
+                android:id="@+id/rtl_known_platform"
                 android:layout_width="match_parent"
                 android:layout_height="70dp">
                 <ImageView
@@ -83,7 +83,7 @@
                 android:background="@color/gray"
                 android:layout_height="1dp"></View>
             <RelativeLayout
-                android:id="@+id/rtl_dianle"
+                android:id="@+id/rtl_bind_wx"
                 android:layout_width="match_parent"
                 android:layout_height="70dp">
                 <ImageView
@@ -139,7 +139,7 @@
                 android:background="@color/gray"
                 android:layout_height="1dp"></View>
             <RelativeLayout
-                android:id="@+id/rtl_dianlu"
+                android:id="@+id/rtl_bind_alipay"
                 android:layout_width="match_parent"
                 android:layout_height="70dp">
                 <ImageView
@@ -187,7 +187,7 @@
                 android:background="@color/gray"
                 android:layout_height="1dp"></View>
             <RelativeLayout
-                android:id="@+id/rtl_duomeng"
+                android:id="@+id/rtl_bind_phone"
                 android:layout_width="match_parent"
                 android:layout_height="70dp">
                 <ImageView
@@ -244,7 +244,7 @@
                 android:background="@color/gray"
                 android:layout_height="1dp"></View>
             <RelativeLayout
-                android:id="@+id/rtl_zhangshanghudong"
+                android:id="@+id/rtl_share"
                 android:layout_width="match_parent"
                 android:layout_height="70dp">
                 <ImageView
