--- a/app/src/main/res/layout/activity_take_red.xml
+++ b/app/src/main/res/layout/activity_take_red.xml
@@ -19,7 +19,7 @@
                 android:layout_width="wrap_content"
                 android:text="红包池"
                 android:textColor="@color/white"
-                android:textSize="18sp"
+                android:textSize="19sp"
                 android:layout_centerInParent="true"
                 android:layout_height="wrap_content" />
             <TextView
@@ -27,10 +27,22 @@
                 android:layout_width="wrap_content"
                 android:text="邀请"
                 android:textColor="@color/white"
+                android:visibility="gone"
                 android:textSize="18sp"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="10dp"
                 android:layout_centerVertical="true"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/tv_red_rules"
+                android:layout_width="wrap_content"
+                android:textSize="15sp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:text="抢红包规则"
+                android:layout_marginLeft="10dp"
+                android:textColor="@drawable/white2gray_seleclor"
                 android:layout_height="wrap_content" />
             <RelativeLayout
                 android:id="@+id/rtl_back"
@@ -90,6 +102,7 @@
                         android:textColor="@color/white"
                         android:layout_centerHorizontal="true"
                         android:layout_alignParentBottom="true"
+                        android:text="暂无"
                         android:textSize="14sp"
                         android:layout_marginBottom="25dp"
                         android:layout_height="wrap_content" />
@@ -106,6 +119,7 @@
                         android:layout_width="wrap_content"
                         android:textColor="@color/white"
                         android:layout_centerHorizontal="true"
+                        android:text="暂无"
                         android:layout_alignParentBottom="true"
                         android:textSize="14sp"
                         android:layout_marginBottom="25dp"
@@ -122,6 +136,7 @@
                         android:layout_width="wrap_content"
                         android:textColor="@color/white"
                         android:layout_centerHorizontal="true"
+                        android:text="暂无"
                         android:layout_alignParentBottom="true"
                         android:textSize="14sp"
                         android:layout_marginBottom="25dp"
@@ -148,6 +163,7 @@
                         android:layout_gravity="center"
                         android:gravity="center"
                         android:layout_weight="1"
+                        android:text="暂无"
                         android:layout_centerHorizontal="true"
                         android:textSize="14sp"
                         android:layout_height="wrap_content"
@@ -176,6 +192,7 @@
                         android:textColor="@color/black"
                         android:layout_gravity="center"
                         android:gravity="center"
+                        android:text="暂无"
                         android:layout_weight="1"
                         android:layout_centerHorizontal="true"
                         android:textSize="14sp"
@@ -186,6 +203,7 @@
                         android:layout_weight="1"
                         android:text="第二名"
                         android:layout_gravity="center"
+
                         android:gravity="center"
                         android:layout_centerHorizontal="true"
                         android:textSize="14sp"
@@ -204,6 +222,7 @@
                         android:textColor="@color/black"
                         android:layout_gravity="center"
                         android:gravity="center"
+                        android:text="暂无"
                         android:layout_weight="1"
                         android:layout_centerHorizontal="true"
                         android:textSize="14sp"
@@ -246,15 +265,7 @@
                         android_custom:max="100"
                         android_custom:textSize="11sp"/>
                 </RelativeLayout>
-                <TextView
-                    android:id="@+id/tv_red_rules"
-                    android:layout_width="wrap_content"
-                    android:layout_toRightOf="@+id/rtl_red_percent"
-                    android:textSize="17sp"
-                    android:text="抢红包规则"
-                    android:layout_marginLeft="10dp"
-                    android:textColor="@drawable/white2gray_seleclor"
-                    android:layout_height="wrap_content" />
+
             </RelativeLayout>
         </LinearLayout>
 
