--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -10,7 +10,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:background="@color/red"
-        android:layout_height="50dp">
+        android:layout_height="70dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -19,6 +19,7 @@
             android:textSize="20sp"
             android:textColor="@color/white"
             android:id="@+id/textView"
+            android:paddingTop="20dp"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true" />
         <RelativeLayout
