--- a/app/src/main/res/layout/activity_get_tudi.xml
+++ b/app/src/main/res/layout/activity_get_tudi.xml
@@ -4,6 +4,10 @@
     android:orientation="vertical"
     android:background="@color/yellow_dark"
     android:layout_height="match_parent">
+    <View
+        android:layout_width="match_parent"
+        android:background="@color/red"
+        android:layout_height="20dp"></View>
   <RelativeLayout
       android:layout_width="match_parent"
       android:background="@color/red"
