--- a/app/src/main/res/layout/activity_help_center.xml
+++ b/app/src/main/res/layout/activity_help_center.xml
@@ -3,6 +3,10 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent">
+    <View
+        android:layout_width="match_parent"
+        android:background="@color/red"
+        android:layout_height="20dp"></View>
   <RelativeLayout
       android:layout_width="match_parent"
       android:background="@color/red"
