--- a/app/src/main/res/layout/activity_one_shop.xml
+++ b/app/src/main/res/layout/activity_one_shop.xml
@@ -2,7 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:background="@color/white"
+    android:orientation="vertical"
     android:layout_height="match_parent">
+    <View
+        android:layout_width="match_parent"
+        android:background="@color/red"
+        android:layout_height="20dp"></View>
     <WebView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
