--- a/app/src/main/res/layout/activity_shitus_details.xml
+++ b/app/src/main/res/layout/activity_shitus_details.xml
@@ -4,7 +4,10 @@
     android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context="Fragments.GetFragment">
-
+    <View
+        android:layout_width="match_parent"
+        android:background="@color/red"
+        android:layout_height="20dp"></View>
     <!-- TODO: Update blank fragment layout -->
 
     <RelativeLayout
