--- a/app/src/main/res/layout/activity_take_red.xml
+++ b/app/src/main/res/layout/activity_take_red.xml
@@ -6,6 +6,10 @@
     android:background="@color/yellow_light_dard"
     android:orientation="vertical"
     android:layout_height="match_parent">
+    <View
+        android:layout_width="match_parent"
+        android:background="@color/red"
+        android:layout_height="20dp"></View>
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
