--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -4,6 +4,10 @@
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
+    <View
+        android:layout_width="match_parent"
+        android:background="@color/red"
+        android:layout_height="20dp"></View>
     <RelativeLayout
         android:layout_width="match_parent"
         android:background="@color/red"
@@ -48,6 +52,7 @@
                    android:src="@mipmap/ic_launcher"
                    app:border_color="@color/gray"
                    android:layout_alignParentRight="true"
+                   android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:layout_height="65dp"
                    />
