--- a/app/src/main/res/layout/fragment_get.xml
+++ b/app/src/main/res/layout/fragment_get.xml
@@ -7,13 +7,14 @@
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/red"
-       android:layout_height="50dp">
+       android:layout_height="70dp">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textAppearance="?android:attr/textAppearanceMedium"
           android:text="返利商城"
           android:textSize="20sp"
+          android:paddingTop="20dp"
           android:textColor="@color/white"
           android:id="@+id/textView"
           android:layout_centerVertical="true"
