--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -13,6 +13,10 @@
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_height="wrap_content">
+        <View
+            android:layout_width="match_parent"
+            android:background="@color/red"
+            android:layout_height="20dp"></View>
         <RelativeLayout
             android:layout_width="match_parent"
             android:background="@color/red"
