--- a/app/src/main/res/layout/fragment_share.xml
+++ b/app/src/main/res/layout/fragment_share.xml
@@ -6,12 +6,13 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:background="@color/red"
-        android:layout_height="50dp">
+        android:layout_height="70dp">
         <TextView
             android:layout_width="wrap_content"
             android:text="分享"
             android:textColor="@color/white"
             android:textSize="18sp"
+            android:paddingTop="20dp"
             android:layout_centerInParent="true"
             android:layout_height="wrap_content" />
         <RelativeLayout
