--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="red">#eb4f38</color>
     <color name="dark_red">#f7000c</color>
+    <color name="light_red">#ffb5b5</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="dark_gray">#cccccc</color>
