--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -25,6 +25,7 @@
         <RelativeLayout
             android:id="@+id/rtl_back"
             android:layout_width="60dp"
+            android:layout_marginTop="20dp"
             android:onClick="back"
             android:layout_height="match_parent">
             <ImageView
@@ -36,11 +37,10 @@
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="wrap_content">
         <TextView
             android:id="@+id/tv_text_qqun"
             android:layout_width="wrap_content"
-            android:text="积分墙"
             android:layout_centerVertical="true"
             android:layout_centerInParent="true"
             android:textColor="@color/black"
@@ -62,5 +62,17 @@
             android:layout_marginLeft="10dp"
             android:layout_height="wrap_content" />
     </RelativeLayout>
-
+     <RelativeLayout
+         android:layout_width="match_parent"
+         android:layout_marginTop="10dp"
+         android:layout_height="wrap_content">
+         <TextView
+             android:layout_width="wrap_content"
+             android:text="深圳轻易游网络科技有限公司"
+             android:textColor="@color/black"
+             android:layout_alignParentRight="true"
+             android:layout_marginRight="10dp"
+             android:layout_marginLeft="10dp"
+             android:layout_height="wrap_content" />
+     </RelativeLayout>
 </LinearLayout>
