--- a/app/src/main/res/layout/activity_fast_task_detail.xml
+++ b/app/src/main/res/layout/activity_fast_task_detail.xml
@@ -37,7 +37,6 @@
         <ImageView
             android:id="@+id/img_icon"
             android:layout_width="80dp"
-            android:background="@mipmap/ic_launcher"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:scaleType="fitXY"
@@ -53,7 +52,6 @@
             <TextView
                 android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
-                android:text="项目名称"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:layout_height="wrap_content" />
@@ -61,35 +59,63 @@
                 android:id="@+id/tv_left_num"
                 android:layout_width="wrap_content"
                 android:layout_weight="1"
-                android:text="总任务量剩下1个"
                 android:textColor="@color/red"
                 android:gravity="center"
                 android:layout_height="wrap_content" />
              <TextView
                  android:id="@+id/tv_left_time"
                  android:layout_width="wrap_content"
-                 android:text="活动还有25天结束"
                  android:layout_weight="1"
                  android:gravity="center"
                  android:layout_height="wrap_content" />
         </LinearLayout>
-        <RelativeLayout
-            android:id="@+id/rtl_accept"
-            android:layout_width="80dp"
-            android:layout_centerVertical="true"
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:orientation="vertical"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="10dp"
-            android:background="@drawable/round_red_bg"
-            android:layout_height="30dp">
-            <TextView
-                android:id="@+id/tv_state"
-                android:layout_width="wrap_content"
-                android:text="接受任务"
-                android:textColor="@color/white"
-                android:textSize="15sp"
-                android:layout_centerInParent="true"
-                android:layout_height="wrap_content" />
-        </RelativeLayout>
+            android:layout_height="match_parent">
+            <RelativeLayout
+                android:id="@+id/rtl_accept"
+                android:layout_width="90dp"
+                android:layout_centerVertical="true"
+                android:layout_weight="1"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/round_red_bg"
+                android:layout_height="30dp">
+                <TextView
+                    android:id="@+id/tv_state"
+                    android:layout_width="wrap_content"
+                    android:text="接受任务"
+                    android:textColor="@drawable/white2gray_seleclor"
+                    android:textSize="15sp"
+                    android:layout_centerInParent="true"
+                    android:layout_height="wrap_content" />
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/rtl_complite"
+                android:layout_width="90dp"
+                android:layout_centerVertical="true"
+                android:layout_weight="1"
+                android:layout_alignParentRight="true"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="5dp"
+                android:background="@drawable/round_red_bg"
+                android:layout_height="30dp"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:text="确认完成"
+                    android:textColor="@drawable/white2gray_seleclor"
+                    android:textSize="15sp"
+                    android:layout_centerInParent="true"
+                    android:layout_height="wrap_content" />
+            </RelativeLayout>
+        </LinearLayout>
+
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
