--- a/app/src/main/res/drawable/round_gray_bg.xml
+++ b/app/src/main/res/drawable/round_gray_bg.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <solid 
-        android:color="@color/gray"
+        android:color="@color/darks_gray"
         />
     <corners
         android:topLeftRadius="10dp"
