--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -37,42 +37,57 @@
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
+        android:layout_marginTop="20dp"
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/tv_text_qqun"
             android:layout_width="wrap_content"
             android:layout_centerVertical="true"
             android:layout_centerInParent="true"
-            android:textColor="@color/black"
+            android:text="版本信息"
+            android:drawableTop="@mipmap/banbenxinxi"
+            android:textColor="@color/darks_gray"
+            android:gravity="center"
             android:textSize="18sp"
             android:layout_marginLeft="10dp"
             android:layout_height="wrap_content" />
     </RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_marginTop="20dp"
+        android:layout_height="wrap_content">
+       <TextView
+           android:layout_width="wrap_content"
+           android:text="QQ客服：434948495"
+           android:textColor="@color/black"
+           android:layout_marginLeft="30dp"
+           android:textSize="16sp"
+           android:layout_height="wrap_content" />
+        <TextView
+           android:layout_width="wrap_content"
+           android:text="易赚邮箱：434948495@qq.com"
+           android:textColor="@color/black"
+            android:layout_marginTop="5dp"
+           android:layout_marginLeft="30dp"
+           android:textSize="16sp"
+           android:layout_height="wrap_content" />
+        <TextView
+           android:layout_width="wrap_content"
+           android:text="微信公众号：yzamt88"
+           android:textColor="@color/black"
+            android:layout_marginTop="5dp"
+           android:layout_marginLeft="30dp"
+           android:textSize="16sp"
+           android:layout_height="wrap_content" />
+    </LinearLayout>
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/tv_text_qq"
-            android:layout_width="wrap_content"
-            android:textColor="@color/black"
-            android:text="@string/about_ours"
-            android:textSize="14sp"
-            android:layout_marginRight="10dp"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:layout_height="wrap_content" />
-    </RelativeLayout>
-     <RelativeLayout
-         android:layout_width="match_parent"
-         android:layout_marginTop="10dp"
-         android:layout_height="wrap_content">
-         <TextView
+        android:layout_height="match_parent">
+         <ImageView
              android:layout_width="wrap_content"
-             android:text="深圳轻易游网络科技有限公司"
-             android:textColor="@color/black"
-             android:layout_alignParentRight="true"
-             android:layout_marginRight="10dp"
-             android:layout_marginLeft="10dp"
+             android:background="@mipmap/about_us_ewm"
+             android:layout_centerInParent="true"
              android:layout_height="wrap_content" />
-     </RelativeLayout>
+    </RelativeLayout>
 </LinearLayout>
