--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -66,7 +66,7 @@
            android:layout_height="wrap_content" />
         <TextView
            android:layout_width="wrap_content"
-           android:text="易赚邮箱：434948495@qq.com"
+           android:text="易钻邮箱：434948495@qq.com"
            android:textColor="@color/black"
             android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
