--- a/app/src/main/res/layout/activity_unit_task.xml
+++ b/app/src/main/res/layout/activity_unit_task.xml
@@ -150,7 +150,34 @@
                 android:layout_width="match_parent"
                 android:background="@color/gray"
                 android:layout_height="1dp"></View>
+            <RelativeLayout
+                android:id="@+id/rtl_duomeng"
+                android:layout_width="match_parent"
+                android:layout_height="70dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:text="易钻ATM5"
+                    android:layout_centerVertical="true"
+                    android:textSize="17sp"
+                    android:gravity="center"
+                    android:drawablePadding="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:drawableLeft="@mipmap/duomeng"
+                    android:textColor="@drawable/black2gray_seleclor"
+                    android:layout_height="wrap_content" />
 
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:background="@mipmap/w_tiaozhuan1"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="10dp"
+                    android:layout_height="wrap_content" />
+            </RelativeLayout>
+            <View
+                android:layout_width="match_parent"
+                android:background="@color/gray"
+                android:layout_height="1dp"></View>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
